apollo-router/tests/integration/snapshots/integration_tests__integration__response_cache__integration_test_with_nested_field_set.snap
---
source: apollo-router/tests/integration/response_cache.rs
expression: response
---
{
  "data": {
    "allProducts": [
      {
        "name": "Test",
        "createdBy": {
          "name": "test",
          "country": {
            "a": "France"
          }
        }
      }
    ]
  },
  "extensions": {
    "apolloCacheDebugging": {
      "version": "1.0",
      "data": [
        {
          "key": "version:1.2:subgraph:products:type:Query:hash:[query-hash]:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
          "invalidationKeys": [],
          "indexes": {
            "subgraph": true,
            "type": true,
            "cache_tag": true
          },
          "kind": {
            "rootFields": [
              "allProducts"
            ]
          },
          "subgraphName": "products",
          "subgraphRequest": {
            "query": "{ allProducts { name createdBy { __typename email country { a } } } }"
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 86400,
            "public": true
          },
          "shouldStore": true,
          "data": {
            "data": {
              "allProducts": [
                {
                  "name": "Test",
                  "createdBy": {
                    "__typename": "User",
                    "email": "test@test.com",
                    "country": {
                      "a": "France"
                    }
                  }
                }
              ]
            }
          },
          "warnings": [
            {
              "code": "NO_CACHE_TAG_ON_ROOT_FIELD",
              "links": [
                {
                  "url": "https://www.apollographql.com/docs/graphos/routing/performance/caching/response-caching/invalidation#invalidation-methods",
                  "title": "Add '@cacheTag' in your schema"
                }
              ],
              "message": "No cache tags are specified on your root fields query. If you want to use active invalidation, you'll need to add cache tags on your root field."
            }
          ]
        },
        {
          "key": "version:1.2:subgraph:users:type:User:representation:e2d4bfa6d172a744110f37cd5227ffb3d146259fe84d19a6c91d8da877373f3e:hash:[query-hash]:data:070af9367f9025bd796a1b7e0cd1335246f658aa4857c3a4d6284673b7d07fa6",
          "invalidationKeys": [],
          "indexes": {
            "subgraph": true,
            "type": true,
            "cache_tag": true
          },
          "kind": {
            "typename": "User",
            "entityKey": {
              "country": {
                "a": "France"
              },
              "email": "test@test.com"
            }
          },
          "subgraphName": "users",
          "subgraphRequest": {
            "query": "query($representations: [_Any!]!) { _entities(representations: $representations) { ... on User { name } } }",
            "variables": {
              "representations": [
                {
                  "country": {
                    "a": "France"
                  },
                  "email": "test@test.com",
                  "__typename": "User"
                }
              ]
            }
          },
          "source": "subgraph",
          "cacheControl": {
            "created": 0,
            "maxAge": 86400,
            "public": true
          },
          "shouldStore": true,
          "data": {
            "data": {
              "name": "test"
            }
          },
          "warnings": []
        }
      ]
    }
  }
}
